docs/versions/v7.0.0/introduction/learning.md
---
title: Learning
old_permalink: /versions/v7.0.0/introduction/learning.html
previous___FILE: ./installation.md
next___FILE: ./community.md
---

The following resources are useful for learning Exponent and some of the projects that it depends on.

## Exponent

-   [The Exponent Log](https://blog.getexponent.com/) - our official blog
-   [Building li.st for Android with Exponent and React Native](https://www.youtube.com/watch?v=cI9bDvDEsYE) - conference talk
-   [Build Cross Platform React Native Apps with Exponent and Redux](https://www.pluralsight.com/courses/build-react-native-exponent-redux-apps) (video course on PluralSight)
-   [Pomodoro](https://github.com/exponent/pomodoroexp) - sample Pomodoro app
-   [Floatyplane](https://github.com/exponent/floatyplane) - a game you might be familiar with
-   [Foodwheel](https://github.com/exponent/foodwheel) - how we decide where to eat lunch
-   [React Native Playground](https://github.com/exponent/rnplay) - source of the client app for [rnplay.org](https://www.rnplay.org/)

## React Native

-   [React Native Express](http://www.reactnativeexpress.com/) - a walkthrough the building blocks of React and React Native.
-   [Official React Native Documentation](https://facebook.github.io/react-native/docs/sample-application-movies.html)
-   [React Native Fundamentals](https://egghead.io/courses/react-native-fundamentals) (video course on Egghead.io)
-   [Learning React Native](http://shop.oreilly.com/product/0636920041511.do) (book)

## React

-   [React lessons on Egghead.io](https://egghead.io/technologies/react) - several playlists that cover React and Redux fundamentals.
-   [Official React Documentation](https://facebook.github.io/react/docs/getting-started.html)

## JavaScript

-   [ES6 Katas](http://es6katas.org/) - exercises to familiarize yourself with new JavaScript features used in React Native
